syntax = "proto3";

package syft.core.tensor;

import "proto/core/tensor/tensor.proto";
import "proto/core/tensor/share_tensor.proto";
import "proto/lib/numpy/array.proto";

message FixedPrecisionTensor {
    oneof data {
        Tensor tensor = 1;
        ShareTensor share = 2;
        syft.lib.numpy.NumpyProto array = 3;
    };

    uint32 base = 4;
    uint32 precision = 5;
}
